# hello-world-sdk-python

./: .gitlab-ci.yml  .manifest.json  Jenkinsfile  PyPI_README.md  README.md  bitbucket-pipelines.yml  install.cmd  install.sh  pyproject.toml
.github/workflows/: publish_pypi.yml
documentation/models/: HelloResponse.md  HttpValidationError.md  Language.md  ValidationError.md
documentation/services/: IndexService.md  OpenapiJsonService.md
examples/: install.cmd  install.sh  sample.py
src/hello_world_sdk/: __init__.py  sdk.py  sdk_async.py
src/hello_world_sdk/models/: __init__.py  hello_response.py  http_validation_error.py  language.py  validation_error.py
src/hello_world_sdk/net/environment/: environment.py
src/hello_world_sdk/services/: index.py  openapi_json.py
src/hello_world_sdk/services/async_/: index.py  openapi_json.py
