[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world_sdk"
version = "1.0.0"
license = { text = "MIT" }
description = """A simple FastAPI example with OpenAPI specification"""
readme = "PyPI_README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0"
]
